--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.8",
     "bootstrap-vue": "^2.23.1",
+    "date-fns": "^3.6.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "vuelidate": "^0.7.7"
