--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.23.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.52.0",
+    "sweetalert2": "^11.11.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
     "vuelidate": "^0.7.7"
