--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.6.8",
     "bootstrap-vue": "^2.23.1",
+    "date-fns": "^3.6.0",
     "pinia": "^2.1.7",
     "primevue": "^3.52.0",
-    "date-fns": "^3.6.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
+    "vue-toast-notification": "^3.1.2",
     "vuelidate": "^0.7.7"
   },
   "devDependencies": {
